update v0 germinate data importation user guide

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,13 +8,19 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: about.qmd
+        text: About
+      - href: germinate/index.qmd
+        text: "Germinate Data Importation"
+      - href: pipeline/index.qmd
+        text: "Data Pipeline"
+
+page-footer:
+  left: "© 2025 COUSIN Project"
+  right: "Made with [Quarto](https://quarto.org/)"
 
 format:
   html:
     theme: cosmo
     css: styles.css
     toc: true
-
-
-
